Reworked PCIe bandwith plot

--- a/PCI_Bandwidth_Benchmark/Makefile
+++ b/PCI_Bandwidth_Benchmark/Makefile
@@ -6,7 +6,7 @@ OPT=-O2
 	${CC} -c ${OPT} $<
 
 pci_bw : PCI_Bandwidth_Benchmark.o timer.o
-	${CC} ${OPT} $< -o $^
+	${CC} ${OPT} $^ -o $@
 
 clean:
 	rm -rf *.o
