--- a/PCI_Bandwidth_Benchmark/Makefile
+++ b/PCI_Bandwidth_Benchmark/Makefile
@@ -5,7 +5,7 @@ OPT=-O2
 %.o : %.c
 	${CC} -c ${OPT} $<
 
-pci_bw : PCI_Bandwidth_Benchmark.o malloc2d.o timer.o
+pci_bw : PCI_Bandwidth_Benchmark.o malloc2D.o timer.o
 	${CC} ${OPT} $^ -o $@
 
 clean:
