--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "mixbench"]
 	path = mixbench
 	url = https://github.com/ekondis/mixbench.git
+[submodule "CloverLeaf"]
+	path = CloverLeaf
+	url = git@github.com:UK-MAC/CloverLeaf.git
