--- a/Dockerfile.Ubuntu20.04
+++ b/Dockerfile.Ubuntu20.04
@@ -3,28 +3,23 @@ WORKDIR /project
 ENV DEBIAN_FRONTEND=noninteractive
 RUN apt-get -qq update && \
     apt-get -qq install -y cmake git vim gcc g++ gfortran software-properties-common \
-            wget gnupg-agent ghostscript likwid \
+            wget gnupg-agent ghostscript xpdf likwid \
             mpich libmpich-dev \
-            openmpi-bin openmpi-doc libopenmpi-dev && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
+            openmpi-bin openmpi-doc libopenmpi-dev
 
 # Installing latest GCC compiler (version 8) for latest compatible with CUDA
-RUN apt-get -qq update && \
-    apt-get -qq install -y gcc-8 g++-8 gfortran-8 \
-                           gcc-10 g++-10 gfortran-10 && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
+RUN apt-get -qq install -y gcc-8 g++-8 gfortran-8 \
+                           gcc-10 g++-10 gfortran-10
 
 # We can use the update-alternatives to switch between compiler versions
-RUN update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-8 90\
-                        --slave /usr/bin/g++ g++ /usr/bin/g++-8\
-                        --slave /usr/bin/gfortran gfortran /usr/bin/gfortran-8\
+RUN update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-8 90 \
+                        --slave /usr/bin/g++ g++ /usr/bin/g++-8 \
+                        --slave /usr/bin/gfortran gfortran /usr/bin/gfortran-8 \
                         --slave /usr/bin/gcov gcov /usr/bin/gcov-8
 
-RUN update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-10 70\
-                        --slave /usr/bin/g++ g++ /usr/bin/g++-10\
-                        --slave /usr/bin/gfortran gfortran /usr/bin/gfortran-10\
+RUN update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-10 70 \
+                        --slave /usr/bin/g++ g++ /usr/bin/g++-10 \
+                        --slave /usr/bin/gfortran gfortran /usr/bin/gfortran-10 \
                         --slave /usr/bin/gcov gcov /usr/bin/gcov-10
 
 RUN chmod u+s /usr/bin/update-alternatives
@@ -38,15 +33,11 @@ RUN echo "deb [trusted=yes arch=amd64] https://repositories.intel.com/graphics/u
 
 RUN apt-get -qq update && \
     apt-get -qq install -y \
-            intel-opencl && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
+            intel-opencl
 
 # Generic OpenCL Loader
 RUN apt-get -qq update && \
-    apt-get -qq install -y clinfo ocl-icd-libopencl1 ocl-icd-* opencl-headers && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
+    apt-get -qq install -y clinfo ocl-icd-libopencl1 ocl-icd-* opencl-headers
 
 # Nvidia GPU software for computation
 RUN wget -q https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64/cuda-repo-ubuntu1804_10.2.89-1_amd64.deb
@@ -54,28 +45,22 @@ RUN apt-key adv --fetch-keys https://developer.download.nvidia.com/compute/cuda/
 RUN dpkg -i cuda-repo-ubuntu1804_10.2.89-1_amd64.deb
 RUN apt-get -qq update && \
     apt-get -qq install -y cuda-toolkit-10-2 cuda-tools-10-2 cuda-compiler-10-2 \
-        cuda-libraries-10-2 cuda-libraries-dev-10-2 libnvidia-compute-450 && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
+        cuda-libraries-10-2 cuda-libraries-dev-10-2 libnvidia-compute-450
 
 # ROCm software installation
 RUN apt-get -qq update && \
-    apt-get -qq install -y libnuma-dev && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
+    apt-get -qq install -y libnuma-dev
 
 RUN wget -qO - http://repo.radeon.com/rocm/apt/debian/rocm.gpg.key | apt-key add -
 RUN echo 'deb [arch=amd64] http://repo.radeon.com/rocm/apt/debian/ xenial main' >> /etc/apt/sources.list.d/rocm.list
 RUN apt-get update -q && \
-    apt-get install -q -y rocm-opencl-dev rocm-dkms && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
+    apt-get install -q -y rocm-opencl-dev rocm-dkms
 
 # Vendor OpenCL
 RUN apt-get -qq update && \
-    apt-get -qq install -y mesa-opencl-icd && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
+    apt-get -qq install -y mesa-opencl-icd
+
+RUN apt-get clean && rm -rf /var/lib/apt/lists/*
 
 SHELL ["/bin/bash", "-c"]
 
