--- a/Dockerfile.Ubuntu18.04
+++ b/Dockerfile.Ubuntu18.04
@@ -1,15 +1,17 @@
-FROM debian:buster
+FROM ubuntu:18.04 AS builder
 WORKDIR /project
 ENV DEBIAN_FRONTEND=noninteractive
-RUN sed -i "/^deb/s/main/main non-free/" /etc/apt/sources.list
 RUN apt-get -qq update && \
     apt-get -qq install -y cmake git vim gcc g++ gfortran software-properties-common \
-            wget gnupg-agent ghostscript likwid \
+            wget gnupg ghostscript likwid \
             mpich libmpich-dev \
             openmpi-bin openmpi-doc libopenmpi-dev
 
 # Installing latest GCC compiler (version 8) for latest compatible with CUDA
-RUN apt-get -qq install -y gcc-8 g++-8 gfortran-8 \
+RUN add-apt-repository ppa:ubuntu-toolchain-r/test
+RUN apt-get -qq update && \
+    apt-get -qq install -y gcc-8 g++-8 gfortran-8 \
+                           gcc-9 g++-9 gfortran-9 \
                            gcc-10 g++-10 gfortran-10
 
 # We can use the update-alternatives to switch between compiler versions
@@ -17,6 +19,11 @@ RUN update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-8 90 \
                         --slave /usr/bin/g++ g++ /usr/bin/g++-8 \
                         --slave /usr/bin/gfortran gfortran /usr/bin/gfortran-8 \
                         --slave /usr/bin/gcov gcov /usr/bin/gcov-8
+
+RUN update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-9 80 \
+                        --slave /usr/bin/g++ g++ /usr/bin/g++-9 \
+                        --slave /usr/bin/gfortran gfortran /usr/bin/gfortran-9 \
+                        --slave /usr/bin/gcov gcov /usr/bin/gcov-9
 
 RUN update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-10 70 \
                         --slave /usr/bin/g++ g++ /usr/bin/g++-10 \
