--- a/Dockerfile.Ubuntu20.04
+++ b/Dockerfile.Ubuntu20.04
@@ -3,7 +3,7 @@ WORKDIR /project
 ENV DEBIAN_FRONTEND=noninteractive
 RUN apt-get -qq update && \
     apt-get -qq install -y cmake git vim gcc g++ gfortran software-properties-common \
-            wget gnupg-agent ghostscript xpdf likwid \
+            wget gnupg-agent ghostscript evince likwid \
             mpich libmpich-dev \
             openmpi-bin openmpi-doc libopenmpi-dev
 
