--- a/Dockerfile.Ubuntu20.04
+++ b/Dockerfile.Ubuntu20.04
@@ -38,6 +38,9 @@ RUN apt-get -qq update && \
             openmpi-bin openmpi-doc libopenmpi-dev && \
     apt-get clean && rm -rf /var/lib/apt/lists/*
 
+RUN update-alternatives --install /usr/bin/python python /usr/bin/python3 30 \
+                        --slave   /usr/bin/pip    pip    /usr/bin/pip3
+
 # Installing latest GCC compiler (version 10)
 RUN apt-get -qq update && \
     apt-get -qq install -y gcc-8 g++-8 gfortran-8 \
