--- a/Dockerfile.Ubuntu20.04
+++ b/Dockerfile.Ubuntu20.04
@@ -77,7 +77,9 @@ RUN update-alternatives \
 
 ## Generic OpenCL Loader
 #RUN apt-get -qq update && \
-#    apt-get -qq install -y clinfo ocl-icd-libopencl1 ocl-icd-* opencl-headers
+#    apt-get -qq install clinfo opencl-headers && \
+#    apt-get clean && rm -rf /var/lib/apt/lists/*
+##    apt-get -qq install -y clinfo ocl-icd-libopencl1 ocl-icd-* opencl-headers
 
 # Nvidia GPU software for computation
 # See https://docs.nvidia.com/hpc-sdk/index.html for Nvidia install instructions
@@ -88,8 +90,9 @@ RUN DEBIAN_FRONTEND=noninteractive \
     apt-get clean && rm -rf /var/lib/apt/lists/*
 
 ## ROCm software installation
-#RUN apt-get -qq update && \
-#    apt-get -qq install -y libnuma-dev
+RUN apt-get -qq update && \
+    apt-get -qq install -y libnuma-dev && \
+    apt-get clean && rm -rf /var/lib/apt/lists/*
 
 RUN wget -qO - http://repo.radeon.com/rocm/apt/debian/rocm.gpg.key | apt-key add -
 RUN echo 'deb [arch=amd64] http://repo.radeon.com/rocm/apt/debian/ xenial main' >> /etc/apt/sources.list.d/rocm.list
@@ -104,6 +107,7 @@ RUN apt-get update -q && \
 RUN apt-get update && apt-get install -y --no-install-recommends \
         ocl-icd-libopencl1 \
         clinfo \
+        opencl-headers \
         ocl-icd-opencl-dev && \
     apt-get clean && rm -rf /var/lib/apt/lists/*
 
