--- a/Dockerfile.Ubuntu20.04
+++ b/Dockerfile.Ubuntu20.04
@@ -34,6 +34,7 @@ RUN apt-get -qq update && \
     DEBIAN_FRONTEND=noninteractive \
     apt-get -qq install -y cmake git vim gcc g++ gfortran software-properties-common wget gnupg-agent \
             2to3 python3-pip python3-matplotlib python3-numpy ghostscript evince gnuplot likwid \
+            mpich libmpich-dev \
             openmpi-bin openmpi-doc libopenmpi-dev && \
     apt-get clean && rm -rf /var/lib/apt/lists/*
 
@@ -125,16 +126,16 @@ RUN chown -R chapter9:chapter9 /home/chapter9
 USER chapter9
 
 ENV LANG='en_US.UTF-8'
-ENV DISPLAY=:0 \
-    NVIDIA_VISIBLE_DEVICES=all \
-    NVIDIA_DRIVER_CAPABILITIES=display,graphics,utility,compute
+ENV DISPLAY=:0
+ENV NVIDIA_VISIBLE_DEVICES=all
+ENV NVIDIA_DRIVER_CAPABILITIES=display,graphics,utility,compute
 
 ENV PATH=${PATH}:/opt/rocm/bin:/opt/rocm/profiler/bin:/opt/rocm/opencl/bin/x86_64
 
-ENV NVARCH=Linux_x86_64 \
-    NVCOMPILERS=/opt/nvidia/hpc_sdk \
-    MANPATH=$MANPATH:$NVCOMPILERS/$NVARCH/20.9/compilers/man \
-    PATH=$NVCOMPILERS/$NVARCH/20.9/compilers/bin:$PATH
+ENV NVARCH=Linux_x86_64
+ENV NVCOMPILERS=/opt/nvidia/hpc_sdk
+ENV MANPATH=$MANPATH:$NVCOMPILERS/$NVARCH/20.9/compilers/man
+ENV PATH=$NVCOMPILERS/$NVARCH/20.9/compilers/bin:$PATH
 
 RUN git clone --recursive https://github.com/essentialsofparallelcomputing/Chapter9.git
 
